--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,6 @@ edition = "2021"
 actix-web = "4"
 mime_guess = "2"
 rust-embed="6.4.2"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+sqlx = { version = "0.6", features = [ "runtime-actix-native-tls", "sqlite" ] }
