--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,4 +14,4 @@ rspotify = { version = "0.11", features = [ "client-ureq", "ureq-rustls-tls" ], 
 rust-embed="6.4.2"
 serde = { version = "1.0", features = [ "derive" ] }
 serde_json = "1.0"
-sqlx = { version = "0.6", features = [ "runtime-actix-native-tls", "sqlite" ] }
+sqlx = { version = "0.6", features = [ "runtime-actix-native-tls", "sqlite", "json" ] }
