--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,9 @@ edition = "2021"
 [dependencies]
 actix-session = { version = "0.7.2", features = [ "cookie-session" ] }
 actix-web = "4"
+derive_more = "0.99.17"
 dotenv = "0.15.0"
+log = "0.4.17"
 mime_guess = "2"
 rspotify = { version = "0.11", features = [ "client-ureq", "ureq-rustls-tls" ], default-features = false }
 rust-embed="6.4.2"
