--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,8 @@ actix-session = { version = "0.7.2", features = [ "cookie-session" ] }
 actix-web = "4"
 derive_more = "0.99.17"
 dotenv = "0.15.0"
+env_logger = "0.8"
+futures-util = "0.3.26"
 log = "0.4.17"
 mime_guess = "2"
 rspotify = { version = "0.11", features = [ "client-ureq", "ureq-rustls-tls" ], default-features = false }
