--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,3 +19,5 @@ rust-embed="6.4.2"
 serde = { version = "1.0", features = [ "derive" ] }
 serde_json = "1.0"
 sqlx = { version = "0.6", features = [ "runtime-actix-native-tls", "sqlite", "json", "migrate" ] }
+mobc = "0.8"
+mobc-redis = "0.8"
