--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,8 @@ rspotify = { version = "0.11", features = [ "client-ureq", "ureq-rustls-tls" ], 
 rust-embed="6.4.2"
 serde = { version = "1.0", features = [ "derive" ] }
 serde_json = "1.0"
+serde_yaml = "0.9"
 sqlx = { version = "0.6", features = [ "runtime-actix-native-tls", "sqlite", "json", "migrate" ] }
 mobc = "0.8"
 mobc-redis = "0.8"
+uuid = { version = "1.3.3", features = ["v4", "serde"] }
