server/cache: pull configuration from env

--- a/.env.sample
+++ b/.env.sample
@@ -1,2 +1,7 @@
 SPL_SPOTIFY_CLIENT_ID=
 SPL_SPOTIFY_CLIENT_SECRET=
+
+SPL_REDIS_HOST=127.0.0.1
+SPL_REDIS_PORT=6379
+SPL_REDIS_USERNAME=
+SPL_REDIS_PASSWORD=
