--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,4 +22,5 @@ serde_yaml = "0.9"
 sqlx = { version = "0.6", features = [ "runtime-actix-native-tls", "sqlite", "json", "migrate" ] }
 mobc = "0.8"
 mobc-redis = "0.8"
+ulid = { version = "1.0.0", features = ["serde"] }
 uuid = { version = "1.3.3", features = ["v4", "serde"] }
